# weave

./: Info.plist  Package.resolved  Package.swift  README.md  package-lock.json  package.json
Sources/: DHT.swift  Encryption.swift  GeoHash.swift  LocationService.swift  Message.swift  P2PNode.swift  Peer.swift  PeerManager.swift  PeerStore.swift  main.swift
Tests/WeaveTests/: CoreLocationServicePublisherTests.swift  CoreLocationServiceTests.swift  DHTTests.swift  EncryptionTests.swift  GeoHashPropertyTests.swift  GeoHashTests.swift  LibP2PIntegrationTests.swift  LibP2PNodeWrapperTests.swift  LocationIntegrationTests.swift  LocationServiceTests.swift  Logging.swift  MultiaddrBuilderTests.swift  P2PNodeTests.swift  PeerManagerTests.swift  PeerStoreTests.swift  PeerTests.swift
Weave/: ChatView.swift  ContentView.swift  PeerConnection.swift  WeaveApp.swift
Weave.xcodeproj/: project.pbxproj
WeaveTests/: PeerConnectionTests.swift  WeaveTests.swift
WeaveUITests/: WeaveUITests.swift  WeaveUITestsLaunchTests.swift
public/: index.html
src/: App.scss  App.tsx  Miner.tsx  WebSocket.tsx  Worker.ts
src/back_end/: Cargo.toml
src/back_end/src/: main.rs
src/components/: ChatBox.tsx  WebRTCConnector.tsx
src/front_end/: Cargo.toml  index.html  (+1 more)
weave/: ContentView.swift  Info.plist  Kademlia.swift  P2PManager.swift  PeerConnectionManager.swift  UPnPPortMapper.swift  weaveApp.swift
weave.xcodeproj/: project.pbxproj
weaveTests/: KademliaTests.swift  P2PManagerTests.swift  weaveTests.swift
weaveUITests/: weaveUITests.swift  weaveUITestsLaunchTests.swift
(+6 files in other folders)
